# weather

./: README.md  test.bash
.github/workflows/: .test.bash.swp  ]  python-app.yml  test-weather-node.yml  test.yml  test_ros2.yml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/weather_pkg/lib/weather_pkg/: weather_node
install/weather_pkg/share/weather_pkg/: local_setup.dsv  local_setup.sh  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/weather_pkg/share/weather_pkg/cmake/: weather_pkgConfig.cmake
log/: latest_build
ros2_weather_ws/.github/workflows/: test.yml
ros2_weather_ws/install/: setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_weather_ws/install/weather_pkg/lib/weather_pkg/: weather_note
ros2_weather_ws/install/weather_pkg/share/weather_pkg/: package.dsv  package.sh  package.xml
ros2_weather_ws/log/: latest_build
ros2_weather_ws/src/weather_pkg/: setup.cfg  setup.py
ros2_weather_ws/src/weather_pkg/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_weather_ws/src/weather_pkg/install/weather_pkg/lib/weather_pkg/: weather_note
ros2_weather_ws/src/weather_pkg/install/weather_pkg/share/weather_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml
ros2_weather_ws/src/weather_pkg/log/: latest_build
ros2_weather_ws/src/weather_pkg/weather_pkg/: weather_note.py
src/weather_pkg/: CMakeLists.txt  package.xml  setup.py
src/weather_pkg/install/: setup.bash  setup.ps1  setup.sh  setup.zsh
src/weather_pkg/install/weather_pkg/share/weather_pkg/: package.ps1  package.sh
src/weather_pkg/log/: latest_build
src/weather_pkg/test/: test.bash  test_weather_node.py
src/weather_pkg/weather_pkg/: .weather_node.py.swn  .weather_node.py.swp  test_weather.py  test_weather_node.py  weather_node.py
test/: test.bash
