<?xml version="1.0"?>
<package format="3">
  <name>weather_pkg</name>
  <version>0.0.1</version>
  <description>A ROS 2 package for publishing weather information.</description>

  <maintainer email="vlongbf@gmail.com">Bun</maintainer>

  <license>Apache-2.0</license>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <exec_depend>requests</exec_depend>
  <test_depend>pytest</test_depend>
  <exec_depend>launch</exec_depend>
</package>

