<?xml version="1.0"?>
<package format="3">
  <name>weather_pkg</name>
  <version>0.1.0</version>
  <description>A ROS 2 package to publish weather information.</description>
  <maintainer email="vlongbf@gmail.com">Bun</maintainer>
  <license>Apache License 2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>requests</depend>
  <test_depend>pytest</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

