<?xml version="1.0"?>
<package format="3">
  <name>weather_pkg</name>
  <version>0.0.1</version>
  <description>The weather_pkg package</description>
  <maintainer email="vlongbf@gmail.com">Bun</maintainer>
  <license>TODO</license>

  <exec_depend>rclpy</exec_depend>
  <test_depend>pytest</test_depend>
</package>

